--- a/popup.css
+++ b/popup.css
@@ -4,16 +4,17 @@ body {
 
 input {
 	width: 600px;
-	padding: 6px;
-	background: #fefefe;
-	border: 1px solid #ddd;
-	border-radius: 2px;
-	outline: 0;
 	box-sizing: border-box;
+	background: #fefefe;
+	border: 0;
+	font-family: monospace;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 22px;
+	outline: 0;
 	transition: all 1s;
 }
 
 input:focus {
 	border-color: rgba(82, 168, 236, 0.8);
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px rgba(82, 168, 236, 0.3);
 }
