--- a/xpather.css
+++ b/xpather.css
@@ -1,23 +1,46 @@
-#xpather-result {
+#xpather {
 	position: fixed;
-	top: 20px;
-	left: 20px;
+	top: 0;
+	left: 0;
 	height: 50px;
-	min-width: 50px;
-	padding: 0 12px;
+	width: 100%;
+	padding: 0 200px 0 16px;
+	border-bottom: 1px solid #000;
 	box-sizing: border-box;
-	border-radius: 4px;
-	background: rgba(0, 0, 0, .75);
-	line-height: 50px;
-	font-family: Helvetica, Arial, Verdana, sans-serif;
-	font-size: 36px;
-	font-weight: 700;
-	color: #fff;
+	box-shadow: 0 4px 12px rgba(50, 50, 50, 0.5);
+	background: #222;
 	z-index: 9999;
 }
 
+#xpather-xpath {
+	background: #222;
+	border: 0;
+	font-size: 16px;
+	font-weight: 400;
+	font-family: monospace;
+	color: #fff;
+	line-height: 42px;
+	padding: 4px 0;
+	height: 50px;
+	width: 100%;
+	box-sizing: border-box;
+	box-shadow: none;
+	outline: 0;
+	margin: 0;
+}
+
+#xpather-result {
+	position: absolute;
+	right: 16px;
+	top: 0;
+	font-size: 28px;
+	font-weight: 700;
+	color: #fff;
+	line-height: 50px;
+}
+
 #xpather-result.no-results {
-	background: rgba(127, 0, 0, .75);
+	color: #ff4630;
 }
 
 .xpather-highlight {
