--- a/css/xpather.css
+++ b/css/xpather.css
@@ -37,6 +37,10 @@
 	margin: 0;
 }
 
+#xpather-xpath::-webkit-input-placeholder {
+	color: #666;
+}
+
 #xpather-result {
 	position: absolute;
 	right: 58px;
@@ -62,7 +66,7 @@
 }
 
 .xpather-sidebar-toggler-active {
-	background-position: 0 -26px !important;
+	background-position: 0 -26px;
 }
 
 #xpather-sidebar {
@@ -121,7 +125,7 @@
 
 .xpather-sidebar-entry:hover {
 	max-height: 100%;
-	background: #0c0c0c !important;
+	background: #0c0c0c;
 }
 
 .xpather-sidebar-entry:nth-child(odd) {
@@ -135,7 +139,7 @@
 }
 
 .xpather-sidebar-entry-info {
-	color: #555 !important;
+	color: #555;
 }
 
 .xpather-sidebar-entry-count {
@@ -148,22 +152,24 @@
 }
 
 .xpather-highlight, .xpather-text-hightlight {
-	background-color: rgba(237, 194, 20, .25) !important;
-	z-index: 99999 !important;
-	border-bottom: 2px solid rgb(170, 130, 10) !important;
+	background-color: rgba(237, 194, 20, .25);
+	z-index: 99999;
+	border-bottom: 2px solid rgb(170, 130, 10);
 	-webkit-filter: sepia(30%);
+	text-shadow: none;
 }
 
 .xpath-important-highlight {
-	background-color: rgba(237, 55, 33, 0.50) !important;
-	border-bottom: 2px solid rgb(185, 55, 37) !important;
-	box-shadow: 0 0 12px rgb(185, 55, 37) !important;
+	background-color: rgba(237, 55, 33, 0.50);
+	border-bottom: 2px solid rgb(185, 55, 37);
+	box-shadow: 0 0 12px rgb(185, 55, 37);
 }
 
 .xpather-on {
-	margin-top: 50px !important;
+	top: 50px;
+	position: relative;
 }
 
 .xpather-sidebar-on {
-	width: 80% !important;
+	width: 80%;
 }
