--- a/css/xpather.css
+++ b/css/xpather.css
@@ -34,6 +34,7 @@
 	width: 100%;
 	min-width: 100%;
 	max-width: 100%;
+	text-transform: none;
 	box-sizing: border-box;
 	box-shadow: none;
 	outline: 0;
@@ -117,6 +118,7 @@
 	line-height: 18px;
 	clear: both;
 	text-align: justify;
+	text-transform: none;
 	border-bottom: 3px solid #222;
 	word-wrap: break-word;
 	overflow: hidden;
