fix single quote in selection + XPather input tweak

--- a/css/xpather.css
+++ b/css/xpather.css
@@ -25,6 +25,7 @@
 	border: 0;
 	font-size: 16px;
 	font-weight: 400;
+	font-style: normal;
 	font-family: 'Droid Sans Mono', monospace;
 	color: #fff;
 	line-height: 42px;
