--- a/css/xpather.css
+++ b/css/xpather.css
@@ -20,8 +20,8 @@
 	padding: 0;
 }
 
-#xpather-xpath {
-	background: #000;
+#xpather-xpath, #xpather-xpath:focus, #xpather-xpath:active, #xpather-xpath:hover {
+	background: #000 !important;
 	border: 0;
 	display: inline-block;
 	float: left;
@@ -29,7 +29,7 @@
 	font-weight: 400;
 	font-style: normal;
 	font-family: 'Droid Sans Mono', monospace;
-	color: #fff;
+	color: #fff !important;
 	line-height: 42px;
 	padding: 6px 0 2px;
 	height: 44px;
